- ui fixes: changed logo, spacings

--- a/src/sections/Cases/Details/Details.module.scss
+++ b/src/sections/Cases/Details/Details.module.scss
@@ -22,7 +22,8 @@
         cursor: pointer;
         top: 50px;
         right: 50px;
-        &+*{
+
+        &+* {
             height: 100%;
         }
     }
@@ -77,21 +78,63 @@
 }
 
 @media screen and (max-width: $mobile-view-width) {
-    .projectDetails{
-        .descriptionContainer{
-            p{
+    .projectDetails {
+        .descriptionContainer {
+            height: 230px;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            flex-direction: row;
+            margin-bottom: 25px;
+            padding-top: 15px;
+
+            p {
                 padding-top: 5px;
+            }           
+
+            &::-webkit-scrollbar-thumb {
+                opacity: 0;
             }
+
+            &:hover {
+                &::-webkit-scrollbar-thumb {
+                    opacity: 1;
+                    background: $purple-light;
+                    border-radius: 5px;
+                }
+            }
+
+            &::-webkit-scrollbar {
+                width: 3px;
+            }
+
+            /* Track */
+            &::-webkit-scrollbar-track {
+                background: transparent;
+            }
+
+            /* Handle on hover */
+            &::-webkit-scrollbar-thumb:hover {
+                background: $purple-dark;
+            }
+
         }
 
-        .sliderImageContainer{
+        .sliderImageContainer {
             width: 355px !important;
             height: 255px;
 
-            img{
+            img {
                 width: 100%;
                 height: 100%;
             }
+        }
+
+        .closeButton{
+            width: 60px;
+            height: 60px;
+            top: 0px;
+            // container spacing(.75) + title spacing(.5)
+            left: 1.25rem;            
         }
     }
 }
