--- a/src/sections/Feedbacks/Feedbacks.module.scss
+++ b/src/sections/Feedbacks/Feedbacks.module.scss
@@ -6,7 +6,7 @@
         height: 400px;
         background-color: $feedback-bg;
         border-radius: 10px;
-        display: flex;
+        display: flex!important;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -45,6 +45,7 @@
             }
 
             p {
+                min-height: 24px;
                 color: $grey-dark;
                 font-size: 18px;
                 line-height: 24px;
@@ -60,7 +61,7 @@
             justify-content: center;
             align-items: center;
             position: relative;
-            height: calc(100% - 270px);
+            // height: calc(100% - 270px);
 
             img {
                 width: 100px;
